# -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.64])
AC_INIT(gstfs, 0.2a, jim.hansson@gmail.com)
AM_INIT_AUTOMAKE

AC_CONFIG_HEADERS([config.h])

AC_PROG_CXX(g++)
AM_PROG_CC_C_O

# Checks for programs.

# Checks for libraries.
PKG_CHECK_MODULES(glib,  glib-2.0 >= 2.0)
PKG_CHECK_MODULES(fuse,  fuse >= 2.7)
PKG_CHECK_MODULES(gstreamer, gstreamer-0.10 >= 0.10.25)

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h unistd.h dirent.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.

# Ask user for path to gtest stuff
AC_ARG_WITH(gtest,                                                               
    [ --with-gtest=<path> prefix of gtest installation. e.g. /usr/local or /usr] 
,                                                                                
    [gtest_PREFIX=$with_gtest],                                                  
    AC_MSG_ERROR([You must call configure with the --with-gtest option.          
    This tells configure where to find the google test library and headers.      
    e.g. --with-gtest=/usr/local or --with-gtest=/usr])                          
)                                                                                
                                                                                 
AC_SUBST(gtest_PREFIX)                                                           
gtest_LIBS="-L${GTEST_PREFIX}/lib -lgtest_main" 
gtest_CFLAGS="-I${GTEST_PREFIX}/include"                                         
AC_SUBST(gtest_LIBS)                                                             
AC_SUBST(gtest_CFLAGS)

#AC_PROG_RANLIB([libtool])
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
